test/passing/.ocamlformat
profile = ocamlformat
break-cases = fit
margin = 77
parse-docstrings = true
wrap-comments = true
max-iters = 2
