test/failing/tests/.ocamlformat
profile = ocamlformat
break-cases = fit
margin = 77
parse-docstrings = true
comments = wrap
max-iters = 2
